--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,272 +1,278 @@
-
 :root {
-/* color variables */
-    --color1: #045676;
-    --color2: #EBF2FA;
-    --color3: #427AA1;
-    --color4: #30292f;
-    --color5: #FFE156;
-/* layout variables */
-    --largest-module-size: 120px;
-    --large-module-size: 50px;
-    --medium-module-size: 11px;
-    --small-module-size: 4px;
+  /* color variables */
+  --color1: #045676;
+  --color2: #ebf2fa;
+  --color3: #427aa1;
+  --color4: #30292f;
+  --color5: #ffe156;
+  /* layout variables */
+  --largest-module-size: 120px;
+  --large-module-size: 50px;
+  --medium-module-size: 11px;
+  --small-module-size: 4px;
 
-    --card-size: 300px;
-/* text-size variables */
-    --largest-text-size: 33px;
-    --second-largest-text-size: 22px;
-    --regular-text-size: 18px;
-    --small-text-size: 13px;
-  }
+  --card-size: 300px;
+  /* text-size variables */
+  --largest-text-size: 33px;
+  --second-largest-text-size: 22px;
+  --regular-text-size: 18px;
+  --small-text-size: 13px;
+}
 
 /* overall page set-up */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    color: var(--color1);
-    font-family: Helvetica, Arial, sans-serif;
-  }
+  color: var(--color1);
+  font-family: Helvetica, Arial, sans-serif;
+}
 
 /* header */
 header {
-    background-color: var(--color3);
-    display: flex;
-    justify-content: space-between;
-  }
-  
+  background-color: var(--color3);
+  display: flex;
+  justify-content: space-between;
+}
+
 header h1 {
-    font-size: var(--largest-text-size);
-    font-weight: bold;
-    background-color: var(--color5);
-    border-bottom: var(--small-module-size) solid var(--color2);
-    padding: var(--medium-module-size) var(--largest-module-size) var(--small-module-size) var(--large-module-size);
-    margin: var(--large-module-size) var(--largest-module-size) var(--large-module-size) 0;
-  }
+  font-size: var(--largest-text-size);
+  font-weight: bold;
+  background-color: var(--color5);
+  border-bottom: var(--small-module-size) solid var(--color2);
+  padding: var(--medium-module-size) var(--largest-module-size)
+    var(--small-module-size) var(--large-module-size);
+  margin: var(--large-module-size) var(--largest-module-size)
+    var(--large-module-size) 0;
+}
 
 header nav {
-    display:flex;
-  }
+  display: flex;
+}
 
 header nav ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-self: flex-end;
-    padding: 0 var(--large-module-size) 0 0;
-    margin: 0 0 var(--large-module-size) 0;
-  }
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-self: flex-end;
+  padding: 0 var(--large-module-size) 0 0;
+  margin: 0 0 var(--large-module-size) 0;
+}
 
 header a {
-    font-size: var(--regular-text-size);
-    text-decoration: none;
-    color: var(--color2);
-    padding: 0 var(--large-module-size) 0 0;
-    margin: 0 var(--medium-module-size) 0 0;
-    border-bottom: var(--small-module-size) solid var(--color2);
-  }
+  font-size: var(--regular-text-size);
+  text-decoration: none;
+  color: var(--color2);
+  padding: 0 var(--large-module-size) 0 0;
+  margin: 0 var(--medium-module-size) 0 0;
+  border-bottom: var(--small-module-size) solid var(--color2);
+}
 
 /* band below header */
 .band-below-header {
-    background-image: url("../images/waves.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    flex-direction: row-reverse;
-  }
+  background-image: url("../images/waves.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 .band-below-header p {
-    margin: var(--largest-module-size) var(--large-module-size) var(--large-module-size) var(--large-module-size);
-    background-color: var(--color5);
-    padding: var(--medium-module-size);
-    font-size: var(--second-largest-text-size);
-  }
+  margin: var(--largest-module-size) var(--large-module-size)
+    var(--large-module-size) var(--large-module-size);
+  background-color: var(--color5);
+  padding: var(--medium-module-size);
+  font-size: var(--second-largest-text-size);
+}
 
-  /* main section */
+/* main section */
 main {
-    background-color: var(--color2);
-  }
+  background-color: var(--color2);
+}
 
 .main-section {
-    display:flex;
-  }  
+  display: flex;
+}
 
 .main-section-Title {
-    width: 30%;
-    font-size: var(--largest-text-size);
-    font-weight: bold;
-    text-align: right;
-    border-right: var(--small-module-size) solid var(--color3);
-    padding: var(--medium-module-size) var(--large-module-size) var(--medium-module-size) var(--large-module-size);
-    margin: var(--medium-module-size) var(--large-module-size) var(--medium-module-size) 0;
-  }
+  width: 30%;
+  font-size: var(--largest-text-size);
+  font-weight: bold;
+  text-align: right;
+  border-right: var(--small-module-size) solid var(--color3);
+  padding: var(--medium-module-size) var(--large-module-size)
+    var(--medium-module-size) var(--large-module-size);
+  margin: var(--medium-module-size) var(--large-module-size)
+    var(--medium-module-size) 0;
+}
 
 .main-section-Content {
-    width: 70%;
-    font-size: var(--regular-text-size);
-    font-weight:normal;
-    padding: var(--medium-module-size) var(--largest-module-size) var(--small-module-size) var(--medium-module-size);
-    margin: var(--medium-module-size) var(--large-module-size) var(--medium-module-size) 0;
-  }
+  width: 70%;
+  font-size: var(--regular-text-size);
+  font-weight: normal;
+  padding: var(--medium-module-size) var(--largest-module-size)
+    var(--small-module-size) var(--medium-module-size);
+  margin: var(--medium-module-size) var(--large-module-size)
+    var(--medium-module-size) 0;
+}
 
 /* about me section */
 #about-me-text {
-    display: flex;
-  }
+  display: flex;
+}
 
 #about-me-text img {
-    height: 200px;
-    width: 200px;
-    margin-right: var(--medium-module-size);
-  }
+  height: 200px;
+  width: 200px;
+  margin-right: var(--medium-module-size);
+}
 
 #about-me-text p {
-    margin-bottom: var(--medium-module-size);
-  }
+  margin-bottom: var(--medium-module-size);
+}
 
 /* work section */
 #work-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
 
 .work-card {
-    margin: var(--medium-module-size) calc(var(--medium-module-size) * 2) var(--medium-module-size) 0;
-    width: var(--card-size);
-    height: var(--card-size);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden
-  }
+  margin: var(--medium-module-size) calc(var(--medium-module-size) * 2)
+    var(--medium-module-size) 0;
+  width: var(--card-size);
+  height: var(--card-size);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
 
 .work-card:first-child {
-    width: calc(var(--card-size) * 1.4);
-  }
+  width: calc(var(--card-size) * 1.4);
+}
 
 .work-card:hover div {
-    border: var(--small-module-size) dotted var(--color5);
-  }
+  border: var(--small-module-size) dotted var(--color5);
+}
 
 .work-card img {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%;
-  }
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
 
 .work-card div {
-    position: absolute;
-    background: var(--color4);
-    color: var(--color5);
-    padding: var(--small-module-size);
-  }
+  position: absolute;
+  background: var(--color4);
+  color: var(--color5);
+  padding: var(--small-module-size);
+}
 
 .work-card p {
-    width: 200px;
-    font-size: var(--small-text-size);
-    color: var(--color2);
-  }
+  width: 200px;
+  font-size: var(--small-text-size);
+  color: var(--color2);
+}
 
 /* contact me section */
 #contact-me-content {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
 #contact-me-content a {
-    font-size: var(--second-largest-text-size);
-    text-decoration: none;
-    color: var(--color1);
-    padding: 0 var(--large-module-size) 0 0;
-    margin: 0 var(--medium-module-size) 0 0;
-    border-bottom: var(--medium-module-size) solid var(--color5);
-  }
+  font-size: var(--second-largest-text-size);
+  text-decoration: none;
+  color: var(--color1);
+  padding: 0 var(--large-module-size) 0 0;
+  margin: 0 var(--medium-module-size) 0 0;
+  border-bottom: var(--medium-module-size) solid var(--color5);
+}
 
 /* styles for screens 980px wide or less */
 @media screen and (max-width: 980px) {
+  .band-below-header p {
+    margin: var(--medium-module-size);
+  }
 
-    .band-below-header p {
-        margin:var(--medium-module-size);
-    }
+  #about-me-text {
+    display: block;
+  }
 
-    #about-me-text {
-        display: block;
-    }
+  .main-section-Title {
+    width: 20%;
+  }
 
-    .main-section-Title {
-        width: 20%;
-    }
+  .main-section-Content {
+    width: 80%;
+  }
 
-    .main-section-Content {
-        width: 80%;
-    }
+  #contact-me-title {
+    visibility: hidden;
+  }
 
-    #contact-me-title {
-        visibility: hidden;
-    }
-
-    #contact-me-content {
-        justify-content: space-between;
-        flex-wrap: nowrap;
-        flex-direction: column;
-        align-content: flex-start;
-    }
+  #contact-me-content {
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-content: flex-start;
+  }
 }
 
 /* styles for screens 768px wide or less */
 @media screen and (max-width: 768px) {
+  header nav {
+    display: none;
+  }
 
-    header nav {
-        display: none;
-    }
+  .main-section {
+    flex-direction: column;
+  }
 
-    .main-section {
-        flex-direction: column;
-    }
+  .main-section-Title {
+    width: unset;
+    border: none;
+    margin: unset;
+  }
 
-    .main-section-Title {
-        width: unset;
-        border: none;
-        margin: unset;
-    }
+  .main-section-Content {
+    margin: unset;
+    width: unset;
+    padding-right: var(--medium-module-size);
+  }
 
-    .main-section-Content {
-        margin: unset;
-        width: unset;
-        padding-right: var(--medium-module-size);
-    }
+  #about-me-text {
+    display: flex;
+  }
 
-    #about-me-text {
-        display: flex;
-    }
+  #about-me-text p {
+    display: none;
+  }
 
-    #about-me-text p {
-        display: none;
-    }
+  #about-me-text p:first-child {
+    display: unset;
+    font-size: var(--small-text-size);
+  }
 
-    #about-me-text p:first-child {
-        display: unset;
-        font-size: var(--small-text-size);
-    }
+  #contact-me-title {
+    display: none;
+  }
 
-    #contact-me-title {
-      display: none;
-    }
-
-    #contact-me-content {
-        border-top: var(--medium-module-size) dotted var(--color4);
-    }
+  #contact-me-content {
+    border-top: var(--medium-module-size) dotted var(--color4);
+  }
 }
 
 /* styles for screens 425px wide or less */
 @media screen and (max-width: 425px) {
-    #about-me-text {
-        display: block;
-    }
+  #about-me-text {
+    display: block;
+  }
+}
